--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kiiroSoji</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
 
 </head>
 <body>
@@ -101,21 +101,21 @@
                 <img src="images/rate1.png" alt="headshot">
                 <div class="card_content">
                     <h3>$25</h3>
-                    <a href=" " class="btn">Avail</a>
+                    <a href="commission.html" class="btn">Avail</a>
                 </div>
             </div>
             <div class="card">
                 <img src="images/rate2.png" alt="headshot">
                 <div class="card_content">
                     <h3>$40</h3>
-                    <a href=" " class="btn">Avail</a>
+                    <a href="commission.html" class="btn">Avail</a>
                 </div>
             </div>
             <div class="card">
                 <img src="images/rate3.png" alt="headshot">
                 <div class="card_content">
                     <h3>$50</h3>
-                    <a href=" " class="btn">Avail</a>
+                    <a href="commission.html" class="btn">Avail</a>
                 </div>
             </div>
             <div class="card">
